[project]
name = "football-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "opencv-python>=4.13.0.92",
    "scikit-learn>=1.6.1",
    "tqdm>=4.0.0",
    "ultralytics>=8.4.13",
    "lap",
    "motmetrics",
    "filterpy",
    "scikit-image",
    "torchvision>=0.10.0",
    "Pillow",
    "thop",
    "ninja",
    "tabulate",
    "tensorboard",
    "loguru",
    "matplotlib",
    "scipy",
    "prettytable",
    "easydict",
    "pyyaml",
    "yacs",
    "termcolor",
    "gdown",
    "h5py",
    "torch",
    "torchreid",
    "easyocr",
]
